deployments/ingress/ingressrules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /echo1
        pathType: Prefix
        backend:
          service:
            name: echo1
            port:
              number: 80
      - path: /echo2
        pathType: Prefix
        backend:
          service:
            name: echo2
            port:
              number: 80
      - path: /get_city(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: simplebackend-service
            port:
              number: 8080
